[gd_scene load_steps=6 format=3 uid="uid://c3poo7bdhm2vk"]

[ext_resource type="Script" path="res://Ingredients/ingredient_spawner.gd" id="1_ew1v7"]
[ext_resource type="Texture2D" uid="uid://dm86op1qdupas" path="res://Ingredients/Egg/egg_spawner.png" id="2_w3w8y"]
[ext_resource type="Script" path="res://Ingredients/draggable_ingredient.gd" id="3_lxmcn"]
[ext_resource type="Texture2D" uid="uid://m8sxg75v4fsc" path="res://Ingredients/Egg/egg_draggable.png" id="4_lx1jr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o78w"]
size = Vector2(100, 134)

[node name="IngredientSpawner" type="Node2D"]
position = Vector2(582, 291)
script = ExtResource("1_ew1v7")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_w3w8y")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_2o78w")

[node name="DraggableIngredient" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("3_lxmcn")

[node name="Sprite2D" type="Sprite2D" parent="DraggableIngredient"]
visible = false
position = Vector2(-2, 4)
scale = Vector2(0.046, 0.046)
texture = ExtResource("4_lx1jr")

[connection signal="ingredient_grabbed" from="." to="DraggableIngredient" method="_on_ingredient_spawner_ingredient_grabbed"]
[connection signal="ingredient_released" from="." to="DraggableIngredient" method="_on_ingredient_spawner_ingredient_released"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
